2010-08-30  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/dvb/dvb.xml:
	Add missing videorate bundle

2010-07-27  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/dvb/dvb.xml:
	Replace deprecated descriptions by _description

2010-07-26  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/dvb/dvb.xml:
	Add _descriptions to components and properties

2010-07-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/dvb/dvb.py:
	Use gst.Fraction for the framerate and remove unused code.

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	*  (svn:ignore):
	Add a couple of files more to ignore

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker (svn:ignore):
	*  (svn:ignore):
	* flumotion/worker/checks (svn:ignore):
	Add files to ignore

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker/checks/Makefile.am:
	Add the check to dist

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add 'deinterlace-mode' and deinterlace-method' properties and deprecate
	'deinterlacer' property

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	Add videorate effect

2010-07-07  Marc André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/dvb/dvb.py:
	Warn deprecated scaled-width property

2010-07-07  Marc André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Replace videoscalling by videoscale effect

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau
